[gd_scene load_steps=6 format=3 uid="uid://creuusrbcuth8"]

[ext_resource type="Script" path="res://player_controller/player.gd" id="1_th52k"]
[ext_resource type="PackedScene" uid="uid://cswh4jkbxedf" path="res://player_controller/camera.tscn" id="2_chvh2"]
[ext_resource type="PackedScene" uid="uid://me85m6wuhaq4" path="res://player_controller/statemachine/state_machine.tscn" id="2_pl103"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pneb0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rl5tp"]

[node name="player" type="CharacterBody3D" node_paths=PackedStringArray("camera") groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
script = ExtResource("1_th52k")
camera = NodePath("Camera/Camera3D")
acceleration = 1.0
air_acceleration = 3.0
jump_velocity = 8.0
jump_time = 4.5

[node name="StateMachine" parent="." node_paths=PackedStringArray("player") instance=ExtResource("2_pl103")]
player = NodePath("..")

[node name="mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_pneb0")

[node name="collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_rl5tp")

[node name="Timers" type="Node" parent="."]

[node name="JumpHeightTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="Camera" parent="." instance=ExtResource("2_chvh2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.609774, 0.320532)

[node name="world_checker" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0.0197723, 0)
hit_from_inside = true
collide_with_areas = true

[connection signal="timeout" from="Timers/JumpHeightTimer" to="." method="_on_jump_height_timer_timeout"]

[editable path="Camera"]
